--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,11 @@
-site_name: 我的第一个站点
+site_name: PolyU课程攻略共享计划
 theme:
   name: gitbook
 nav:
-  - 首页: index.md  
-  - 测试页: test.md
+- Home: index.md
+- User Guide:
+    - Writing yr docs: user-guid/writing-your-docs.md
+    - Styling your docs: user-guide/styling-your-docs.md
+- About:
+    - License: about/license.md
+    - Release Notes: about/release-notes.md
